# CenterPoint

./: .clang-format  .gitignore  .gitignore.swp  CMakeLists.txt  CenterPoint.doc  CenterPointTRT.doc  LICENSE  README.md  pfe_baseline32000.onnx  pfe_baseline_fp16.engine  requirements.txt  run.sh
doc/: ._CenterPointTRT.doc
include/: BatchStream.h  EntropyCalibrator.h  iou3d_nms.h  postprocess.h  preprocess.h  scatter_cuda.h
include/common/: logger.cpp
news/include/: centerpoint.h  config.h
news/include/common/: argsParser.h
news/src/: postprocess.cpp  samplecenterpoint.cpp
olds/: CMakeLists.txt
olds/include/: utils.h
olds/olds/include/: centerpoint.h  postprocess.h
olds/olds/src/: centerpoint.cpp  preprocess.cu  samplecenterpoint.cpp  scatter_cuda.cu
olds/src/: centerpoint.cpp  samplecenterpoint.cpp
src/: CMakeLists.txt  README.md  centerpoint.cpp  centerpoint.h  iou3d_nms.cpp  iou3d_nms_kernel.cu  postprocess.cpp  preprocess.cpp  preprocess.cu  preprocess.h  samplecenterpoint.cpp
src/common/: buffers.h
tools/: create_engine.py  export_onnx.py  generate_calib_data.py  generate_input_data.py  setup3.sh  waymo_centerpoint_pp_two_pfn_stride1_3x.py  waymo_eval.py
tools/.ipynb_checkpoints/: debug-checkpoint.ipynb
tools/catkin_ws/: .rosinstall  .rosinstall.bak  catkin_make.sh  default.rviz  default_rviz.rviz
tools/catkin_ws/.catkin_tools/profiles/default/: config.yaml
tools/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
tools/catkin_ws/devel/include/tf/: FrameGraph.h  FrameGraphRequest.h  FrameGraphResponse.h  tfMessage.h
tools/catkin_ws/devel/include/tf2_msgs/: FrameGraph.h  FrameGraphRequest.h  FrameGraphResponse.h  LookupTransformAction.h  LookupTransformActionFeedback.h  LookupTransformActionGoal.h  LookupTransformActionResult.h  LookupTransformFeedback.h  LookupTransformGoal.h  LookupTransformResult.h  TF2Error.h  TFMessage.h
tools/catkin_ws/devel/lib/pkgconfig/: cv_bridge.pc  eigen_conversions.pc  image_geometry.pc  kdl_conversions.pc  kitti_tutorial.pc  opencv_tests.pc  test_tf2.pc  tf.pc  tf2.pc  tf2_bullet.pc  tf2_eigen.pc  tf2_geometry_msgs.pc  tf2_kdl.pc  tf2_msgs.pc  tf2_py.pc  tf2_ros.pc  tf2_sensor_msgs.pc  tf2_tools.pc  tf_conversions.pc  waymo_pub.pc  waymo_track.pc
tools/catkin_ws/devel/lib/tf/: static_transform_publisher  testBroadcaster  testListener  tf_change_notifier  tf_echo  tf_empty_listener  tf_monitor  transform_listener_unittest
tools/catkin_ws/devel/lib/tf2_ros/: buffer_server  static_transform_publisher
tools/catkin_ws/devel/share/cv_bridge/cmake/: cv_bridge-extras.cmake  cv_bridgeConfig-version.cmake  cv_bridgeConfig.cmake
tools/catkin_ws/devel/share/eigen_conversions/cmake/: eigen_conversionsConfig-version.cmake  eigen_conversionsConfig.cmake
tools/catkin_ws/devel/share/image_geometry/cmake/: image_geometryConfig.cmake
tools/catkin_ws/devel/share/kdl_conversions/cmake/: kdl_conversionsConfig.cmake
tools/catkin_ws/devel/share/kitti_tutorial/cmake/: kitti_tutorialConfig.cmake
tools/catkin_ws/devel/share/opencv_tests/cmake/: opencv_testsConfig.cmake
tools/catkin_ws/devel/share/test_tf2/cmake/: test_tf2Config.cmake
tools/catkin_ws/devel/share/tf/cmake/: tf-msg-extras.cmake  tf-msg-paths.cmake  tfConfig.cmake
tools/catkin_ws/devel/share/tf2/cmake/: tf2Config.cmake
tools/catkin_ws/devel/share/tf2_bullet/cmake/: tf2_bulletConfig.cmake
tools/catkin_ws/devel/share/tf2_eigen/cmake/: tf2_eigenConfig.cmake
tools/catkin_ws/devel/share/tf2_geometry_msgs/cmake/: tf2_geometry_msgsConfig.cmake
tools/catkin_ws/devel/share/tf2_kdl/cmake/: tf2_kdlConfig.cmake
tools/catkin_ws/devel/share/tf2_msgs/cmake/: tf2_msgs-msg-extras.cmake  tf2_msgs-msg-paths.cmake  tf2_msgsConfig.cmake
tools/catkin_ws/devel/share/tf2_py/cmake/: tf2_pyConfig.cmake
tools/catkin_ws/devel/share/tf2_ros/cmake/: tf2_rosConfig.cmake
tools/catkin_ws/devel/share/tf2_sensor_msgs/cmake/: tf2_sensor_msgsConfig.cmake
tools/catkin_ws/devel/share/tf2_tools/cmake/: tf2_toolsConfig.cmake
tools/catkin_ws/devel/share/tf_conversions/cmake/: tf_conversionsConfig.cmake
tools/catkin_ws/devel/share/waymo_pub/cmake/: waymo_pubConfig.cmake
tools/catkin_ws/src/: CMakeLists.txt
tools/catkin_ws/src/geometry/tf/: .CMakeLists.txt.swp  CMakeLists.txt
tools/catkin_ws/src/waymo_pub/: CMakeLists.txt  package.xml
tools/catkin_ws/src/waymo_pub/src/: data_utils.py  lidar_camera_sync.py  publish_utils.py  waymo_track.py
tools/catkin_ws/src/waymo_track/: CMakeLists.txt  gt_rviz.rviz  package.xml
tools/catkin_ws/src/waymo_track/src/: sort_3d.py  sort_3d_ctrv.py  sort_3d_ukf.py  ukf.py  waymo_track.py  waymo_track_ukf.py
tools/det3d/: builder.py
tools/det3d/core/bbox/: box_np_ops.py  box_torch_ops.py  geometry.py
tools/det3d/core/sampler/: preprocess.py  sample_ops.py
tools/det3d/core/utils/: scatter.py
tools/det3d/datasets/: builder.py  custom.py
tools/det3d/datasets/loader/: build_loader.py
tools/det3d/datasets/pipelines/: formating.py  loading.py  preprocess.py
tools/det3d/datasets/utils/: create_gt_database.py
tools/det3d/datasets/waymo/: waymo.py  waymo_converter.py
tools/det3d/models/backbones/: scn.py
tools/det3d/models/bbox_heads/: __init__.py  center_head.py  center_head_binrot.py  utils.py
tools/det3d/models/detectors/: point_pillars.py  single_stage.py  voxelnet.py
tools/det3d/models/losses/: centernet_loss.py
tools/det3d/models/necks/: rpn.py
tools/det3d/models/readers/: dynamic_voxel_encoder.py  pillar_encoder.py  voxel_encoder.py
tools/det3d/models/roi_heads/: roi_head_template.py
tools/det3d/models/utils/: __init__.py  norm.py  post_process.py
tools/det3d/ops/dcn/masked_conv.egg-info/: PKG-INFO  SOURCES.txt
tools/det3d/ops/iou3d_nms/iou3d_nms.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tools/det3d/ops/iou3d_nms/src/: iou3d_nms.h
tools/det3d/ops/point_cloud/: bev_ops.py  point_cloud_ops.py
tools/det3d/torchie/apis/: train.py
tools/det3d/torchie/trainer/: trainer.py
tools/det3d/torchie/trainer/hooks/: __init__.py  optimizer.py
(+100 files in other folders)
